# grip-and-drip-backend

./: .env.example  .gitignore  SESSION_SUMMARY.md  main.py  manage.py  pyproject.toml
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/categories/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/categories/migrations/: 0001_initial.py
apps/contact/: admin.py  models.py  serializers.py  urls.py  views.py
apps/contact/migrations/: 0001_initial.py
apps/orders/: admin.py  models.py  serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py
apps/products/: admin.py  apps.py  models.py  search_urls.py  serializers.py  signals.py  urls.py  views.py
apps/products/management/commands/: generate_sample_data.py  import_products.py  products_import_data.json  seo_report.py  validate_schema.py
apps/products/migrations/: 0001_initial.py
apps/products/templatetags/: admin_dashboard_tags.py
apps/seo/: schema.py  sitemaps.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py
templates/admin/: dashboard_stats.html  index.html
