[project]
name = "grip-and-drip-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django~=5.2",
    "django-ckeditor>=6.7.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-import-export>=4.4.1",
    "django-mptt>=0.18.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
]
